# ride_shield

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  install_linux_deps.sh  main.cpp  project.md
cmake/: EmbedResource.cmake  ProjectDependencies.cmake  ThirdPartySources.cmake
cmake/scripts/: bootstrap_ros2_workspace.cmake  stage_onnxruntime.cmake
cmake/toolchains/: rk3588-aarch64.cmake
inc/: resources.h
inc/RideShield/core/: embedded_resource.h  image_view.h  tensor_view.h  types.h
inc/RideShield/decision/: fusion_engine.h
inc/RideShield/inference/: coco_labels.h  model_pipeline.h  onnx_zero_copy.h  yolo_detector.h  yolo_preprocess.h
inc/RideShield/perception/: front_perception.h  rear_perception.h
inc/RideShield/ros2/: node_skeletons.h
inc/RideShield/ui/: vehicle_bridge.h
src/decision/: fusion_engine.cpp
src/inference/: model_pipeline.cpp  onnx_zero_copy.cpp  yolo_detector.cpp  yolo_preprocess.cpp
src/perception/: front_perception.cpp  rear_perception.cpp
src/ros2/: node_skeletons.cpp
src/ui/: vehicle_bridge.cpp
tests/: camera_live_test.cpp  front_detection_test.cpp  test_test.cpp  zero_copy_views_test.cpp
ui/qml/: DashboardPanel.qml  DetectionPanel.qml  Main.qml  MetricCard.qml  RearViewPanel.qml  StatusBar.qml  Theme.qml  ZoneIndicator.qml
